fix to scroll issue on mobile nav

--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -284,6 +284,7 @@ h1.footer-logo {
       margin-top: 50px;
 //      max-height: 45px;
       overflow: hidden;
+      width: 100% !important;
 
       @media (max-width: 768px) {
        margin-top: 50px;
